fix label sizing issue on mobile on the form rows

--- a/components/form/body/row/Label.module.scss
+++ b/components/form/body/row/Label.module.scss
@@ -43,6 +43,7 @@
       font-weight: 500;
       margin-right: 8px;
       margin-bottom: 8px;
+      max-width: 90%;
     }
   }
 
